--- a/.env
+++ b/.env
@@ -52,6 +52,7 @@ SMTP_FROM_NAME=Workforce Chatbot
 SMTP_FROM_EMAIL=tarunjaat0711@gmail.com 
 
 
+
 # Rate Limiting Configuration
 LOGIN_RATE_LIMIT=5
 LOGIN_RATE_WINDOW=3600
@@ -63,3 +64,6 @@ PASSWORD_RESET_RATE_WINDOW=3600
 # Optional: JWT Configuration (if you plan to add authentication later)
 # JWT_SECRET=your_jwt_secret
 # JWT_EXPIRES_IN=24h  
+CLOUD_NAME = dujjwjzct
+API_KEY = 552411426273882
+API_SECRET = 33RIQJJOJYbNTh28PXBWOSX0in8
