--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ SMTP_SECURE=false
 SMTP_USER=tarunjaat0711@gmail.com
 
 SMTP_PASS=ilhcvjhbzbnvguvy
-SMTP_FROM_NAME=Workforce Chatbot
+SMTP_FROM_NAME=Parking Zone 
 SMTP_FROM_EMAIL=tarunjaat0711@gmail.com 
 
 
